# indexeddb-rs

./: Cargo.toml
indexeddb-test/: Cargo.toml  package-lock.json  package.json
indexeddb-test/src/: lib.rs
src/: db.rs  index.rs  lib.rs  object_store.rs  request.rs  transaction.rs
tests/: web.rs
