[package]
name = "indexeddb"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/derekdreery/indexeddb-rs"
readme = "README.md"
description = "indexeddb callbacks to rust futures"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
futures = "0.3.5"
js-sys = "0.3.44"
lazy_static = "1.4.0"
wasm-bindgen-futures = "0.4.17"
console-web = "0.1.2"
serde = "*"

[dependencies.web-sys]
version = "0.3.44"
features = [
    "Window",
    "DomException",
    "DomStringList",
    "IdbDatabase",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbVersionChangeEvent",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbIndex",
    "IdbIndexParameters",
]

[workspace]
members = [
    ".",
    "indexeddb-test",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
