[package]
name = "indexeddb-test"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexeddb = { path = ".." }
wasm-bindgen = "0.2.67"
console-web = "0.1.2"
futures = "0.3.5"
wasm-bindgen-futures = "0.4.17"
console_error_panic_hook = "0.1.6"
web-sys = "0.3.44"
js-sys = "0.3.44"
